# OpenCVImageManipulation

./: CMakeLists.txt  ocvTest.cpp
